# gpr_sella_repro

./: .gitignore  LICENSE  pixi.toml  readme.org
bench_runs/: calc_rundata.py  check_dist_sim.py  check_sim.py  gen_allgpdat.sh  gen_paired_res.py  plot_gprdruns.py  readme.org
bench_runs/eon/: Snakefile  _saddle_eon_ef.py  dimer_mixin.ini  finID_Snakefile  gpr_mixin.ini  parse_gprd_times.py  plot_gprd_opt_times.py  readme.org  run_eon.py
bench_runs/eon/profiles/elja_generic/: config.yaml
bench_runs/eon/scripts/: run_eon.sh
bench_runs/rundata/: data_gprd.csv  data_idimer_cgrot_lbfgs.csv  data_sella.csv
bench_runs/sella/: Snakefile  base_config.ini  eongit.yaml  run_min_sella.py  run_sella.py
bench_runs/sella/profiles/any_cpu/: config.yaml
bench_runs/sella/scripts/: run_min_sella.sh  run_sella.sh
data/sella_si/: calc.py
data/sella_si/doublets/: 000.xyz  001.xyz  002.xyz  003.xyz  004.xyz  005.xyz  006.xyz  007.xyz  008.xyz  009.xyz  010.xyz  011.xyz  012.xyz  013.xyz  014.xyz  015.xyz  016.xyz  017.xyz  018.xyz  019.xyz  020.xyz  021.xyz  022.xyz  023.xyz  024.xyz  025.xyz  026.xyz  027.xyz  028.xyz  029.xyz  030.xyz  031.xyz  032.xyz  033.xyz  034.xyz  035.xyz  036.xyz  037.xyz  038.xyz  039.xyz  (+195 more)
subrepos/IterativeRotationsAssignments/: .gitrepo
subrepos/ase/: .gitrepo
subrepos/chemparseplot/: .gitrepo
subrepos/eOn/: .gitrepo
subrepos/eOn/subprojects/: gpr_optim.wrap
subrepos/eOn/subprojects/gpr_optim/: .gitrepo  README.md  cmake_gtest.patch  main.cpp  meson.build  meson_options.txt  pixi.toml
subrepos/eOn/subprojects/gpr_optim/.github/workflows/: c-cpp.yml  docbuilder.yml
subrepos/eOn/subprojects/gpr_optim/gpr/: AtomicDimer.cpp  AtomicDimer.h  AtomicDimer.inl  AtomicDimerInit.cpp  Enums.h
subrepos/eOn/subprojects/gpr_optim/gpr/auxiliary/: Distance.cpp  Distance.h  ProblemSetUp.inl
subrepos/eOn/subprojects/gpr_optim/gpr/dimer/: Dimer.cpp  Dimer.h
subrepos/eOn/subprojects/gpr_optim/gpr/ml/: GaussianProcessRegression.cpp  GaussianProcessRegression.h  SCG.h  SCG.inl
subrepos/eOn/subprojects/gpr_optim/gpr/potentials/: EAMPotential.cpp
subrepos/eOn/subprojects/gpr_optim/managers/io/: FileManager.cpp
subrepos/eOn/subprojects/gpr_optim/structures/: Structures.h
subrepos/eOn/subprojects/gpr_optim/tests/gpr/EONPotential/: Morse.h
subrepos/eOn/subprojects/gpr_optim/tests/gpr/auxiliary/: DistanceTest.cpp  DistanceTest.h
subrepos/eOn/subprojects/gpr_optim/tests/gpr/ml/: GaussianProcessRegressionTest.cpp
subrepos/eOn/subprojects/gpr_optim/tests/gpr/potentials/: EAMPotentialTest.cpp
subrepos/nwchem/: .gitrepo
subrepos/nwchem/QA/tests/metagga_li4h4_1_m05_0/: metagga_li4h4_1_m05_0.out
subrepos/pychumpchem/: .gitrepo  pixi.toml  readme_src.org
subrepos/pychumpchem/nb/: worklog.md
subrepos/pychumpchem/pychumpchem/engine/orca/_blocks/: base.jinja  coord.jinja  geom.jinja  geom_scan.jinja  neb.jinja
subrepos/rgpycrumbs/: .gitrepo  readme_src.org
subrepos/sella/: .gitrepo
subrepos/spack/: .gitrepo
